<resources>
    <string name="app_name">UNI Music Player</string>
    <string name="nav_header_username">My Music</string>
    <string name="buttonAllSongs">All songs</string>
    <string name="btnFav">Favorites</string>
    <string name="btnPlaylists">Playlists</string>
    <string name="btnSettings">Settings</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="back_arrow">skip to back</string>
    <string name="play_eq">Play item</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="music_image">Music Image</string>>
</resources>
