<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <ImageView
        android:id="@+id/play_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/play_eq"
        android:src="@drawable/ic_play_arrow_black_36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_centerVertical="true"
        android:paddingLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_title"
            tools:text="@string/song_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>

        <TextView
            android:id="@+id/artist_name"
            tools:text="@string/artist_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>
    </LinearLayout>
</RelativeLayout>