<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_music"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAllSongs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/adminButtonBck2"
                android:drawableLeft="@drawable/ic_allmusic_black_24dp"
                android:text="@string/buttonAllSongs"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textColor="@color/adminButtonText" />

            <Button
                android:id="@+id/btnFav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/adminButtonBck1"
                android:drawableLeft="@drawable/ic_favo"
                android:text="@string/btnFav"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textColor="@color/adminButtonText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlaylists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/adminButtonBck1"
                android:drawableLeft="@drawable/ic_playlist_music_black_24dp"
                android:text="@string/btnPlaylists"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textColor="@color/adminButtonText" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@color/adminButtonBck2"
                android:drawableLeft="@drawable/ic_settings_icon"
                android:text="@string/btnSettings"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/adminButtonText" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

